--- a/contact.html
+++ b/contact.html
@@ -301,7 +301,7 @@
     </div>
   </div>
 
-  <div class="contact-card" style="background-image: url('https://files.catbox.moe/c9902k.png');">
+  <div class="contact-card" style="background-image: url('https://files.catbox.moe/07pfgw.png');">
     <div class="content-wrapper">
       <div class="name">ميس نهي</div>
       <div class="subject">مادة علمية</div>
@@ -334,7 +334,7 @@
     </div>
   </div>
 
-  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/5euias.png');">
+  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/loktrj.png');">
     <div class="note-top">خاص بطلاب الأونلاين فقط</div>
     <div class="content-wrapper">
       <div class="name">ميس سجدة</div>
