--- a/hw.html
+++ b/hw.html
@@ -5,52 +5,52 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>تسليم الواجب</title>
 <style>
-  body{font-family: 'Cairo', sans-serif; background:#f0f4f8; margin:0; padding:0; display:flex; justify-content:center; align-items:center; min-height:100vh;}
-  .container{width:95%; max-width:600px;}
-  .card{background:#fff; border-radius:15px; padding:20px; box-shadow:0 8px 20px rgba(0,0,0,0.1); margin-bottom:20px; animation:fadeIn 0.5s;}
-  h2{text-align:center; color:#0369a1;}
-  input{width:100%; padding:10px; margin:10px 0; border-radius:10px; border:1px solid #ccc;}
-  button{width:100%; padding:12px; margin:10px 0; background:#0ea5a3; color:#fff; border:none; border-radius:10px; font-size:16px; cursor:pointer; transition:0.3s;}
-  button:hover{background:#0369a1;}
-  label{display:block; margin:5px 0;}
-  @keyframes fadeIn{from{opacity:0} to{opacity:1}}
+body{font-family:'Cairo',sans-serif;background:#f0f4f8;margin:0;padding:0;display:flex;justify-content:center;align-items:center;min-height:100vh;}
+.container{width:95%; max-width:600px;}
+.card{background:#fff;border-radius:15px;padding:20px;box-shadow:0 8px 20px rgba(0,0,0,0.1);margin-bottom:20px;animation:fadeIn 0.5s;}
+h2{text-align:center;color:#0369a1;}
+input{width:100%;padding:10px;margin:10px 0;border-radius:10px;border:1px solid #ccc;}
+button{width:100%;padding:12px;margin:10px 0;background:#0ea5a3;color:#fff;border:none;border-radius:10px;font-size:16px;cursor:pointer;transition:0.3s;}
+button:hover{background:#0369a1;}
+label{display:block;margin:5px 0;}
+@keyframes fadeIn{from{opacity:0} to{opacity:1}}
 </style>
 </head>
 <body>
 <div class="container">
 
-  <div class="card" id="startCard">
-    <h2>اختر نوع الطالب</h2>
-    <button onclick="selectType('onLine')">اونلاين</button>
-    <button onclick="selectType('center')">سنتر</button>
-  </div>
+<div class="card" id="startCard">
+<h2>اختر نوع الطالب</h2>
+<button onclick="selectType('onLine')">اونلاين</button>
+<button onclick="selectType('center')">سنتر</button>
+</div>
 
-  <div class="card" id="formCard" style="display:none;">
-    <h2>املأ بياناتك</h2>
-    <input type="text" id="studentName" placeholder="الاسم">
-    <input type="text" id="studentMobile" placeholder="رقم الموبايل">
-    <input type="text" id="centerCode" placeholder="كود السنتر" style="display:none;">
-    <button onclick="startHomework()">ابدأ الواجب</button>
-  </div>
+<div class="card" id="formCard" style="display:none;">
+<h2>املأ بياناتك</h2>
+<input type="text" id="studentName" placeholder="الاسم">
+<input type="text" id="studentMobile" placeholder="رقم الموبايل">
+<input type="text" id="centerCode" placeholder="كود السنتر" style="display:none;">
+<button onclick="startHomework()">ابدأ الواجب</button>
+</div>
 
-  <div class="card" id="homeworkCard" style="display:none;">
-    <h2>الواجب</h2>
-    <div id="questionsContainer" style="max-height:400px; overflow-y:auto;"></div>
-    <button onclick="submitHomework()">تسليم الواجب</button>
-  </div>
+<div class="card" id="homeworkCard" style="display:none;">
+<h2>الواجب</h2>
+<div id="questionsContainer" style="max-height:400px; overflow-y:auto;"></div>
+<button onclick="submitHomework()">تسليم الواجب</button>
+</div>
 
-  <div class="card" id="qrCard" style="display:none;">
-    <h2>تم تسليم الواجب بنجاح 🎉</h2>
-    <img id="qrImage" src="" style="display:block; margin:10px auto; width:250px; height:250px;">
-    <p id="qrNote" style="text-align:center; font-weight:bold;"></p>
-  </div>
+<div class="card" id="qrCard" style="display:none;">
+<h2>تم تسليم الواجب بنجاح 🎉</h2>
+<img id="qrImage" src="" style="display:block;margin:10px auto;width:250px;height:250px;">
+<p id="qrNote" style="text-align:center;font-weight:bold;"></p>
+</div>
 
 </div>
 
 <script>
 let studentType = '';
 let homeworkData = [];
-const API_URL = "https://script.google.com/macros/s/AKfycbwOng7gLphdrfhbKJnDI9_Od8faYExGleEm-_biPynHU2sCAs0GudWfM74KEa9frL8D/exec"; // ضع رابط Web App هنا
+const API_URL = "https://script.google.com/macros/s/AKfycby9mob6o99x0dewsSLc8lspXn1ph94cpW3iUI7NaasEEx_hvs2M0W7vgtw_3_oC8EOg/exec";
 
 function selectType(type){
   studentType = type;
@@ -78,6 +78,7 @@ function startHomework(){
   }).catch(err=>{
     container.innerHTML = "";
     alert("❌ فشل تحميل الواجب");
+    console.log(err);
   });
 }
 
@@ -114,6 +115,7 @@ function submitHomework(){
     document.getElementById('qrNote').innerText = studentType=="center" ? "نزل QR على موبايلك للدخول" : "ابعت الواجب على الرقم عبر واتس اب";
   }).catch(err=>{
     alert("❌ فشل توليد QR");
+    console.log(err);
   });
 }
 </script>
