--- a/hw.html
+++ b/hw.html
@@ -1,124 +1,315 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تسليم الواجب</title>
-<style>
-body{font-family:'Cairo',sans-serif;background:#f0f4f8;margin:0;padding:0;display:flex;justify-content:center;align-items:center;min-height:100vh;}
-.container{width:95%; max-width:600px;}
-.card{background:#fff;border-radius:15px;padding:20px;box-shadow:0 8px 20px rgba(0,0,0,0.1);margin-bottom:20px;animation:fadeIn 0.5s;}
-h2{text-align:center;color:#0369a1;}
-input{width:100%;padding:10px;margin:10px 0;border-radius:10px;border:1px solid #ccc;}
-button{width:100%;padding:12px;margin:10px 0;background:#0ea5a3;color:#fff;border:none;border-radius:10px;font-size:16px;cursor:pointer;transition:0.3s;}
-button:hover{background:#0369a1;}
-label{display:block;margin:5px 0;}
-@keyframes fadeIn{from{opacity:0} to{opacity:1}}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>واجهة تعليمية مع اختيار نوع الواجب</title>
+  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
+    body {
+      font-family: 'Cairo', sans-serif;
+      background: #f0f8ff;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #222;
+      overflow-x: hidden;
+    }
+    .container {
+      max-width: 600px;
+      width: 100%;
+      text-align: center;
+    }
+    dotlottie-wc {
+      margin: 0 auto 30px auto;
+      display: block;
+      border-radius: 50%;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      animation: fadeInDown 1s ease forwards;
+      opacity: 0;
+      transform: translateY(-20px);
+      animation-delay: 0.2s;
+    }
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 30px;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 1s ease forwards;
+      animation-delay: 0.5s;
+      flex-wrap: wrap;
+    }
+    button {
+      background: #007acc;
+      color: white;
+      border: none;
+      padding: 14px 28px;
+      border-radius: 30px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      box-shadow: 0 6px 10px rgba(0,122,204,0.4);
+      transition: background 0.3s ease, transform 0.2s ease;
+      user-select: none;
+      min-width: 160px;
+    }
+    button:hover {
+      background: #005fa3;
+      transform: scale(1.05);
+    }
+    /* نصائح التعليم */
+    .tips {
+      text-align: right;
+      margin-bottom: 40px;
+      opacity: 0;
+      animation: fadeIn 1s ease forwards;
+      animation-delay: 0.8s;
+    }
+    .tips h2 {
+      margin-bottom: 15px;
+      color: #007acc;
+      font-weight: 700;
+      font-size: 1.5rem;
+    }
+    .tips ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .tips li {
+      background: #e6f0ff;
+      margin-bottom: 12px;
+      padding: 12px 20px;
+      border-radius: 12px;
+      font-size: 1rem;
+      box-shadow: 0 2px 6px rgba(0,122,204,0.2);
+      transition: transform 0.3s ease;
+    }
+    .tips li:hover {
+      transform: translateX(-5px);
+      background: #cce4ff;
+    }
+    /* كارت الصورة */
+    .card {
+      max-width: 100%;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      cursor: pointer;
+      opacity: 0;
+      animation: fadeInUp 1s ease forwards;
+      animation-delay: 1.1s;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+    }
+    .card img {
+      width: 100%;
+      display: block;
+      transition: transform 0.4s ease;
+    }
+    .card:hover {
+      transform: scale(1.05) rotate(2deg);
+      box-shadow: 0 15px 30px rgba(0,0,0,0.3);
+    }
+    .card:hover img {
+      transform: scale(1.1);
+    }
+    /* أنيميشنات دخول */
+    @keyframes fadeInDown {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
+    }
+    /* نافذة اختيار الواجب */
+    .popup {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      background: white;
+      padding: 25px 30px;
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.25);
+      z-index: 1000;
+      width: 320px;
+      text-align: center;
+      transition: transform 0.3s ease;
+      user-select: none;
+    }
+    .popup.show {
+      transform: translate(-50%, -50%) scale(1);
+    }
+    .popup h3 {
+      margin-bottom: 20px;
+      color: #007acc;
+      font-weight: 700;
+      font-size: 1.3rem;
+    }
+    .popup button {
+      background: #007acc;
+      margin: 10px 0;
+      width: 100%;
+      font-size: 1.1rem;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      user-select: none;
+    }
+    .popup button:hover {
+      background: #005fa3;
+    }
+    .popup .cancel-btn {
+      background: #e04e4e;
+      margin-top: 15px;
+    }
+    .overlay {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.4);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.3s ease;
+      z-index: 999;
+    }
+    .overlay.show {
+      opacity: 1;
+      pointer-events: all;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
+  <div class="container">
 
-<div class="card" id="startCard">
-<h2>اختر نوع الطالب</h2>
-<button onclick="selectType('onLine')">اونلاين</button>
-<button onclick="selectType('center')">سنتر</button>
-</div>
+    <!-- الوجه المتحرك -->
+    <dotlottie-wc 
+      src="https://lottie.host/43575bbc-37b9-472a-8370-77722a5ac849/vZUlcjtt3L.lottie" 
+      style="width: 300px; height: 300px;" 
+      speed="1" autoplay loop>
+    </dotlottie-wc>
 
-<div class="card" id="formCard" style="display:none;">
-<h2>املأ بياناتك</h2>
-<input type="text" id="studentName" placeholder="الاسم">
-<input type="text" id="studentMobile" placeholder="رقم الموبايل">
-<input type="text" id="centerCode" placeholder="كود السنتر" style="display:none;">
-<button onclick="startHomework()">ابدأ الواجب</button>
-</div>
+    <!-- أزرار الواجبات -->
+    <div class="buttons" id="buttons-container">
+      <button data-name="واجب الأسبوع الأول"> واجب الاسبوع اضغط هنا </button>
+    </div>
 
-<div class="card" id="homeworkCard" style="display:none;">
-<h2>الواجب</h2>
-<div id="questionsContainer" style="max-height:400px; overflow-y:auto;"></div>
-<button onclick="submitHomework()">تسليم الواجب</button>
-</div>
+    <!-- نصائح التعليم -->
+    <div class="tips">
+      <h2>5 نصائح مهمة للتعليم</h2>
+      <ul>
+        <li>حدد وقتًا يوميًا للدراسة بشكل منتظم.</li>
+        <li>اختر مكانًا هادئًا وخاليًا من المشتتات.</li>
+        <li>قم بتلخيص النقاط المهمة بعد كل جلسة دراسية.</li>
+        <li>استخدم طرق تعليمية متنوعة مثل الفيديوهات والخرائط الذهنية.</li>
+        <li>تواصل مع زملائك واطلب المساعدة عند الحاجة.</li>
+      </ul>
+    </div>
 
-<div class="card" id="qrCard" style="display:none;">
-<h2>تم تسليم الواجب بنجاح 🎉</h2>
-<img id="qrImage" src="" style="display:block;margin:10px auto;width:250px;height:250px;">
-<p id="qrNote" style="text-align:center;font-weight:bold;"></p>
-</div>
+    <!-- كارت الصورة -->
+    <div class="card" tabindex="0">
+      <img src="https://files.catbox.moe/084crp.jpg" alt="صورة تعليمية متحركة" />
+    </div>
 
-</div>
+  </div>
 
-<script>
-let studentType = '';
-let homeworkData = [];
-const API_URL = "https://script.google.com/macros/s/AKfycby9mob6o99x0dewsSLc8lspXn1ph94cpW3iUI7NaasEEx_hvs2M0W7vgtw_3_oC8EOg/exec";
+  <!-- نافذة الاختيار -->
+  <div class="popup" id="popup">
+    <h3>اختر نوع الواجب</h3>
+    <button id="btn-first">واجب تانيه ثانوي</button>
+    <button id="btn-second">واجب تالته ثانوي</button>
+    <button class="cancel-btn" id="btn-cancel">إلغاء</button>
+  </div>
+  <div class="overlay" id="overlay"></div>
 
-function selectType(type){
-  studentType = type;
-  document.getElementById('startCard').style.display = 'none';
-  document.getElementById('formCard').style.display = 'block';
-  if(type=='center'){
-    document.getElementById('centerCode').style.display='block';
-  }
-}
+  <script>
+    const buttonsContainer = document.getElementById('buttons-container');
+    const popup = document.getElementById('popup');
+    const overlay = document.getElementById('overlay');
 
-function startHomework(){
-  const name = document.getElementById('studentName').value;
-  const mobile = document.getElementById('studentMobile').value;
-  const code = document.getElementById('centerCode').value;
-  if(name=="" || mobile=="") return alert("اكمل البيانات");
+    let currentClickedButtonName = '';
 
-  const container = document.getElementById('questionsContainer');
-  container.innerHTML = "<p style='text-align:center;'>⏳ جاري تحميل الواجب ...</p>";
+    // روابط الواجبات حسب نوع الواجب
+    const links = {
+      "first": "https://www.mrfaisal.net/hw2.html",
+      "second": "https://www.mrfaisal.net/hw3.html"
+    };
 
-  fetch(`${API_URL}?action=getHomework`)
-  .then(res => res.json())
-  .then(data=>{
-    homeworkData = data;
-    showHomework();
-  }).catch(err=>{
-    container.innerHTML = "";
-    alert("❌ فشل تحميل الواجب");
-    console.log(err);
-  });
-}
-
-function showHomework(){
-  document.getElementById('formCard').style.display='none';
-  document.getElementById('homeworkCard').style.display='block';
-  const container = document.getElementById('questionsContainer');
-  container.innerHTML = "";
-  homeworkData.forEach(q=>{
-    let div = document.createElement('div');
-    div.innerHTML = `<p>${q.number}. ${q.text}</p>`;
-    q.options.forEach((opt,i)=>{
-      div.innerHTML += `<label><input type="checkbox" name="q${q.number}" value="${i}"> ${opt}</label>`;
+    // لما تضغط على أي زر واجب يفتح النافذة
+    buttonsContainer.addEventListener('click', e => {
+      if(e.target.tagName === 'BUTTON') {
+        currentClickedButtonName = e.target.getAttribute('data-name') || '';
+        showPopup();
+      }
     });
-    container.appendChild(div);
-  });
-}
 
-function submitHomework(){
-  const studentData = {
-    name: document.getElementById('studentName').value,
-    mobile: document.getElementById('studentMobile').value,
-    type: studentType,
-    code: document.getElementById('centerCode').value,
-    homeworkName: "اسم الواجب"
-  };
+    function showPopup() {
+      popup.classList.add('show');
+      overlay.classList.add('show');
+    }
+    function closePopup() {
+      popup.classList.remove('show');
+      overlay.classList.remove('show');
+    }
+    overlay.addEventListener('click', closePopup);
+    document.getElementById('btn-cancel').addEventListener('click', closePopup);
 
-  fetch(`${API_URL}?action=getQR&data=`+encodeURIComponent(JSON.stringify(studentData)))
-  .then(res=>res.json())
-  .then(data=>{
-    document.getElementById('homeworkCard').style.display='none';
-    document.getElementById('qrCard').style.display='block';
-    document.getElementById('qrImage').src = data.qr;
-    document.getElementById('qrNote').innerText = studentType=="center" ? "نزل QR على موبايلك للدخول" : "ابعت الواجب على الرقم عبر واتس اب";
-  }).catch(err=>{
-    alert("❌ فشل توليد QR");
-    console.log(err);
-  });
-}
-</script>
+    // فتح الرابط حسب الاختيار
+    document.getElementById('btn-first').addEventListener('click', () => {
+      window.open(links.first, '_blank');
+      closePopup();
+    });
+    document.getElementById('btn-second').addEventListener('click', () => {
+      window.open(links.second, '_blank');
+      closePopup();
+    });
 
+    // إضافة زر جديد بسهولة
+    function addButton(text) {
+      const btn = document.createElement('button');
+      btn.textContent = text;
+      btn.setAttribute('data-name', text);
+      btn.style.opacity = 0;
+      btn.style.animation = `fadeInUp 0.6s ease forwards`;
+      btn.style.animationDelay = '0.8s';
+      btn.addEventListener('click', () => {
+        currentClickedButtonName = text;
+        showPopup();
+      });
+      buttonsContainer.appendChild(btn);
+    }
+
+    // مثال لإضافة واجب جديد:
+    // addButton('واجب الأسبوع الثالث');
+
+    // تأثير دخول عند تحميل الصفحة
+    document.addEventListener('DOMContentLoaded', () => {
+      const btns = document.querySelectorAll('.buttons button');
+      btns.forEach((btn, i) => {
+        btn.style.animation = `fadeInUp 0.6s ease forwards`;
+        btn.style.animationDelay = `${0.6 + i * 0.2}s`;
+        btn.style.opacity = 0;
+        setTimeout(() => { btn.style.opacity = 1; }, (600 + i * 200));
+      });
+      const card = document.querySelector('.card');
+      card.style.animation = 'fadeInUp 0.8s ease forwards';
+      card.style.animationDelay = '1.5s';
+      card.style.opacity = 0;
+      setTimeout(() => { card.style.opacity = 1; }, 1500);
+    });
+  </script>
 </body>
 </html>
