--- a/hw3.html
+++ b/hw3.html
@@ -214,7 +214,7 @@ button:hover{
 
 <!-- QR -->
 <div id="qrContainer"></div>
-<p style="text-align:center;font-weight:bold;color:#4a148c;margin-top:10px;"> احتفظ بيه علشان تدخل  الحصه بتاعتك لو انت طالب سنتر لو انت طالب اونلاين انزل اخر الصفحه ابعته لينا احتفظ ده QR بتاعك 📱</p>
+<p style="text-align:center;font-weight:bold;color:#4a148c;margin-top:10px;"> ده QR بتاعك خده اسكرين شوت ضروري علشان لو انت طالب سنتر مش هتدخل الحصه الا بيه ولو انت طالب اونلاين انزل اخر الصفحة وابعتلنا الاسكرين علي الواتس اب ملحوظة خد ال QR سكرين شوت📱</p>
 
 <!-- تصحيح الأسئلة -->
 <div id="answersReview"></div>
