--- a/hw2.html
+++ b/hw2.html
@@ -212,7 +212,7 @@ button:hover{
 <h2>تم التصحيح 🎉</h2>
 <div id="studentInfo"></div>
 <div id="answersReview"></div>
-<p style="text-align:center;font-weight:bold;color:#4a148c">ده QR اللي هتدخل بيه الحصه بتاعتك، احتفظ بيه 📱</p>
+<p style="text-align:center;font-weight:bold;color:#4a148c">ده QR بتاعك خده اسكرين شوت ضروري علشان لو انت طالب سنتر مش هتدخل الحصه الا بيه ولو انت طالب اونلاين انزل اخر الصفحة وابعتلنا الاسكرين علي الواتس اب ملحوظة خد ال QR سكرين شوت📱</p>
 <div id="qrContainer"></div>
 <div id="advice" style="text-align:center;font-size:18px;margin-top:15px;color:#4a148c;font-weight:bold"></div>
 </div>
