--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
   </footer>
 
   <script>
+    // preloader
     const preloader = document.getElementById('preloader');
     window.addEventListener('load', () => {
       preloader.style.transition = 'opacity 0.8s ease';
@@ -443,12 +444,19 @@
       setTimeout(() => preloader.style.display = 'none', 800);
     });
 
+    // dark mode toggle
     const toggleBtn = document.getElementById('toggleDarkMode');
     toggleBtn.addEventListener('click', () => {
       document.body.classList.toggle('dark');
       const isDark = document.body.classList.contains('dark');
       toggleBtn.textContent = isDark ? '☀️ النهار' : '🌙 الليل';
       toggleBtn.setAttribute('aria-pressed', isDark);
+    });
+
+    // منع النقر يمين
+    document.addEventListener('contextmenu', function(e) {
+      e.preventDefault();
+      alert('تم تعطيل النقر بزر الماوس الأيمن.');
     });
   </script>
 
