--- a/start.html
+++ b/start.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>روابط مستر فيصل - أنيق ومتجاوب</title>
+<title> كل ما تحتاجه هنا في موقع مستر فيصل</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet" />
 <style>
   body {
@@ -358,6 +358,11 @@
     <footer>
       <a href="privacy.html">سياسة الخصوصية</a> | <span>© 2025 مستر فيصل</span>
     </footer>
+    <script>
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+  });
+</script>
   </main>
 </body>
 </html>
