--- a/shakwy.html
+++ b/shakwy.html
@@ -290,6 +290,10 @@
     agreeBtn.disabled = true;
   });
 </script>
-
+<script>
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+  });
+</script>
 </body>
 </html>
