--- a/track.html
+++ b/track.html
@@ -20,5 +20,10 @@
   <iframe src="https://script.google.com/macros/s/AKfycbxDIBentwH_kFEF24h3sDWFM5SFIRqP3YisxV-yK9rfPTcGXbDMlZ_ihXPaXJasdlcr3w/exec" 
           allowfullscreen>
   </iframe>
+  <script>
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+  });
+</script>
 </body>
 </html>
