--- a/track.html
+++ b/track.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>عرض صفحة Google Script</title>
+  <title>  منتجاتنا</title>
   <style>
     body, html {
       margin: 0; padding: 0; height: 100%;
