--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>تواصل معنا مع نصائح</title>
+  <title>تواصل معنا </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
@@ -283,7 +283,7 @@
     <div class="content-wrapper">
       <div class="name"> مستر محمد عارف</div>
       <div class="subject">مادة علمية</div>
-      <a href="https://wa.me/201276814042?text=ازيك%20يا%20مستر%20محمد%20عارف" target="_blank" class="whatsapp-button">
+      <a href="https://wa.me/201001933983?text=ازيك%20يا%20مستر%20محمد%20عارف" target="_blank" class="whatsapp-button">
         تواصل واتساب
         <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
       </a>
@@ -294,7 +294,7 @@
     <div class="content-wrapper">
       <div class="name"> مستر عبدالله</div>
       <div class="subject">مادة علمية</div>
-      <a href="https://wa.me/201276814042?text=ازيك%20يا%20مستر%20عبدالله" target="_blank" class="whatsapp-button">
+      <a href="https://wa.me/201001933983?text=ازيك%20يا%20مستر%20عبدالله" target="_blank" class="whatsapp-button">
         تواصل واتساب
         <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
       </a>
@@ -305,29 +305,29 @@
     <div class="content-wrapper">
       <div class="name">ميس نهي</div>
       <div class="subject">مادة علمية</div>
-      <a href="https://wa.me/201276814042?text=ازيك%20يا%20ميس%20نهي" target="_blank" class="whatsapp-button">
+      <a href="https://wa.me/201001933983?text=ازيك%20يا%20ميس%20نهي" target="_blank" class="whatsapp-button">
         تواصل واتساب
         <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
       </a>
     </div>
   </div>
 
-  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/7ftj3g.png');">
+  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/styupz.png');">
     <div class="content-wrapper">
       <div class="name"> ميس أمنية</div>
       <div class="subject">مادة علمية</div>
-      <a href="https://wa.me/201276814042?text=ازيك%20يا%20ميس%20امنيه" target="_blank" class="whatsapp-button">
+      <a href="https://wa.me/201001933983?text=ازيك%20يا%20ميس%20امنيه" target="_blank" class="whatsapp-button">
         تواصل واتساب
         <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
       </a>
     </div>
   </div>
 
-  <div class="contact-card" style="background-image: url('https://files.catbox.moe/7u3nis.png');">
+  <div class="contact-card" style="background-image: url('https://files.catbox.moe/f4qpf6.png');">
     <div class="content-wrapper">
       <div class="name"> ميس منار</div>
       <div class="subject">مادة علمية</div>
-      <a href="https://wa.me/201276814042?text=ازيك%20يا%20ميس%20منار" target="_blank" class="whatsapp-button">
+      <a href="https://wa.me/201001933983?text=ازيك%20يا%20ميس%20منار" target="_blank" class="whatsapp-button">
         تواصل واتساب
         <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
       </a>
@@ -350,7 +350,7 @@
     <div class="content-wrapper">
       <div class="name">تواصل مع فطومة</div>
       <div class="subject">علاقات عامة</div>
-      <a href="https://wa.me/201556611570?text=ازيك%20يا%20فطومه" target="_blank" class="whatsapp-button">
+      <a href="https://wa.me/201070086878?text=ازيك%20يا%20فطومه" target="_blank" class="whatsapp-button">
         تواصل واتساب
         <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
       </a>
