--- a/exam.html
+++ b/exam.html
@@ -130,7 +130,7 @@
 
   <script>
     // === غيّر هذا بالرابط المنشور من Web App (Apps Script) ===
-    window.GAS_ENDPOINT = "PUT_YOUR_DEPLOYED_WEB_APP_URL_HERE";
+    window.GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbz1anGSdFDEMj41VxKNcHkrTicjY2fkXezQot3WL8Ec43bIBvlo6wC2jG4TViCj7A3OFQ/exec";
     // مدة الامتحان (دقائق)
     window.EXAM_DURATION_MIN = 20;
   </script>
