--- a/exam.html
+++ b/exam.html
@@ -1,173 +1,29 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>امتحان جغرافيا</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>  امتحاناتنا</title>
   <style>
-    body {
-      font-family: Tahoma, Arial, sans-serif;
-      background: linear-gradient(to right, #74ebd5, #ACB6E5);
-      margin: 0; padding: 0;
-      text-align: center;
+    body, html {
+      margin: 0; padding: 0; height: 100%;
+      direction: rtl;
     }
-    .container {
-      max-width: 800px;
-      margin: 30px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 20px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-      animation: fadeIn 1s ease-in-out;
-    }
-    h1 { color: #333; margin-bottom: 15px; }
-    .question { text-align: right; margin: 15px 0; }
-    .options { margin-right: 20px; }
-    button {
-      background: #4CAF50;
-      color: white;
-      padding: 12px 25px;
-      margin: 20px 0;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      font-size: 18px;
-      transition: transform 0.2s ease;
-    }
-    button:hover { transform: scale(1.05); background: #45a049; }
-    .result {
-      display: none;
-      font-size: 22px;
-      font-weight: bold;
-      margin-top: 20px;
-      color: #2c3e50;
-      animation: popUp 1s ease;
-    }
-    .leaderboard {
-      margin-top: 30px;
-      text-align: center;
-    }
-    .leaderboard h2 {
-      color: #222;
-      margin-bottom: 10px;
-    }
-    .leaderboard table {
+    iframe {
       width: 100%;
-      border-collapse: collapse;
-    }
-    .leaderboard th, .leaderboard td {
-      border: 1px solid #ccc;
-      padding: 8px;
-    }
-    @keyframes fadeIn {
-      from {opacity:0; transform:translateY(20px);}
-      to {opacity:1; transform:translateY(0);}
-    }
-    @keyframes popUp {
-      0% {transform:scale(0.5); opacity:0;}
-      100% {transform:scale(1); opacity:1;}
+      height: 100vh;
+      border: none;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>امتحان الجغرافيا</h1>
-
-    <div id="examForm">
-      <label>اسم الطالب:</label>
-      <input type="text" id="studentName" required><br><br>
-
-      <label>
-        <input type="checkbox" id="privacy" required>
-        أوافق على سياسة الخصوصية
-      </label>
-
-      <div id="questions"></div>
-
-      <button onclick="submitExam()">تسليم الامتحان</button>
-    </div>
-
-    <div class="result" id="resultBox"></div>
-
-    <div class="leaderboard" id="leaderboardBox" style="display:none;">
-      <h2>لوحة المتسابقين</h2>
-      <table id="leaderboardTable">
-        <thead>
-          <tr><th>الترتيب</th><th>الاسم</th><th>الدرجة</th></tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-  </div>
-
-<script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbz54xyCFon5TyorHDtZWqswnnOFzBsQQo5vx9w60GDn5u77yXCZ2lqGpCzOP5cuPirDPQ/exec"; // ضع لينك الويب آب بتاعك
-
-// الأسئلة (مع الإجابة الصحيحة)
-const questions = [
-  {q:"1- اكبر القارات مورفولوجيا وديموغرافيا تقع فى النصف .... لخريطة العالم", 
-   options:["الجنوب الشرقي","الشمال الشرقي","جنوب غربي","شمال غربي"], ans:1},
-  {q:"2- اى من القارات التالية خالية من الدول الحبيسة", 
-   options:["أمريكا الجنوبية","أوروبا","أفريقيا","أمريكا الشمالية"], ans:3},
-  // ... كمل باقي 25 سؤال بنفس الشكل ...
-];
-
-// عرض الأسئلة في الصفحة
-const qDiv = document.getElementById("questions");
-questions.forEach((item, i) => {
-  let div = document.createElement("div");
-  div.className = "question";
-  div.innerHTML = `<p>${item.q}</p>`;
-  item.options.forEach((opt, j) => {
-    div.innerHTML += `
-      <label class="options">
-        <input type="radio" name="q${i}" value="${j}"> ${opt}
-      </label><br>`;
+  <iframe src="https://script.google.com/macros/s/AKfycbxC1pp4cCrEiV6MsxymVd2O3obIwikWGonDBHGQO6Mhg0uwo5WGTKJfV5iZrF98oDBd6A/exec" 
+          allowfullscreen>
+  </iframe>
+  <script>
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
   });
-  qDiv.appendChild(div);
-});
-
-function submitExam() {
-  const name = document.getElementById("studentName").value.trim();
-  const privacy = document.getElementById("privacy").checked;
-  if (!name) return alert("من فضلك أدخل اسمك");
-  if (!privacy) return alert("لابد من الموافقة على سياسة الخصوصية");
-
-  let score = 0;
-  questions.forEach((item,i)=>{
-    const ans = document.querySelector(`input[name=q${i}]:checked`);
-    if (ans && parseInt(ans.value) === item.ans) score++;
-  });
-
-  // إرسال النتيجة إلى Google Apps Script
-  fetch(scriptURL + "?action=submit&name=" + encodeURIComponent(name) + "&score=" + score, {
-    method: "GET",
-    mode: "cors"
-  })
-  .then(r => r.json())
-  .then(data => {
-    document.getElementById("examForm").style.display = "none";
-    let resultBox = document.getElementById("resultBox");
-    resultBox.style.display = "block";
-    resultBox.innerHTML = `🎉 مبروك ${name}! درجتك: ${score} من ${questions.length} <br> ترتيبك الحالي: ${data.rank}`;
-    showLeaderboard(data.leaderboard);
-  })
-  .catch(err=>{
-    console.error("Error:",err);
-    alert("تعذر الاتصال بالخادم. حاول مرة أخرى.");
-  });
-}
-
-function showLeaderboard(leaderboard){
-  const box = document.getElementById("leaderboardBox");
-  const tbody = document.querySelector("#leaderboardTable tbody");
-  tbody.innerHTML = "";
-  leaderboard.forEach((row,i)=>{
-    tbody.innerHTML += `<tr>
-      <td>${i+1}</td><td>${row.name}</td><td>${row.score}</td>
-    </tr>`;
-  });
-  box.style.display = "block";
-}
 </script>
 </body>
 </html>
