--- a/hw.html
+++ b/hw.html
@@ -244,8 +244,8 @@
 
     // روابط الواجبات حسب نوع الواجب
     const links = {
-      "first": "https://www.mrfaisal.net/hw2.html",
-      "second": "https://www.mrfaisal.net/hw3.html"
+      "first": "https://www.mrfaisal.net/hwwait.html",
+      "second": "https://www.mrfaisal.net/hwwait.html"
     };
 
     // لما تضغط على أي زر واجب يفتح النافذة
