--- a/examtalta.html
+++ b/examtalta.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>  امتحاناتنا</title>
+  <style>
+    body, html {
+      margin: 0; padding: 0; height: 100%;
+      direction: rtl;
+    }
+    iframe {
+      width: 100%;
+      height: 100vh;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <iframe src="https://script.google.com/macros/s/AKfycbyDTYXSoyn2dzSOm96GnAdjLPL6Xx3j2AY429h2ea6ueheLwLBWfaYFpouCg1njS8PrFA/exec" 
+          allowfullscreen>
+  </iframe>
+  <script>
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+  });
+</script>
+</body>
+</html>
