--- a/exam.html
+++ b/exam.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نظام الامتحانات الإلكتروني</title>
+    <title> الامتحانات </title>
     <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -236,7 +236,7 @@
     <div class="star" style="top: 75%; left: 75%;">✦</div>
     
     <div class="container">
-        <h1>نظام الامتحانات الإلكتروني</h1>
+        <h1> الامتحانات </h1>
         
         <p class="subtitle">
             "التميز ليس صدفة، بل نتيجة التخطيط الجاد والعمل الدؤوب"
