--- a/talb.html
+++ b/talb.html
@@ -154,8 +154,8 @@
       <tbody>
         <tr>
           <td>الأولى</td>
-          <td>لسه مفيش واجب</td>
-          <td>لسه مفيش واجب</td>
+          <td>المقومات</td>
+          <td>من صفحة 5 إلى 6</td>
         </tr>
       </tbody>
     </table>
@@ -163,16 +163,16 @@
     <table id="thirdTable">
       <thead>
         <tr>
-          <th>المحاضرة</th>
-          <th>الواجب في</th>
+          <th>الحصة</th>
+          <th>الدرس</th>
           <th>الواجب</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>الأولى</td>
-          <td>حل الواجب في مسار الواجبات </td>
-          <td>من صفحة 2 إلى 14</td>
+          <td>الأحلاف</td>
+          <td>من صفحة 8 إلى 11</td>
         </tr>
       </tbody>
     </table>
